// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ScaleItem to match snapshot 1`] = `
<li
  class="range-slider__track-scale__item"
>
  <button
    class="range-slider__track-scale__item-button"
    type="button"
  >
    button text
  </button>
</li>
`;

exports[`ScaleItemButton view to match snapshot 1`] = `
<button
  class="range-slider__track-scale__item-button"
  type="button"
>
  button text
</button>
`;
